# multi-view-recognition-Cpp

./: CMakeLists.txt  README.md  main.cpp  main.h
model/: ModelManager.cpp  ModelManager.h
util/: DataLoader.h  DataManager.cpp  DataManager.h  MetricLearning.cpp  MetricLearning.h
